fix tree focussed state visibility

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -38,6 +38,18 @@
       font-size: medium;
     }
   }
+
+  &:focus {
+    li {
+      &.selected,
+      &:not(.list-nested-item).selected,
+      &.list-nested-item.selected > .list-item {
+        &:before {
+          background: @level-5-bg;
+        }
+      }
+    }
+  }
 }
 
 .right {
